# swri_profiler

./: .gitignore  .travis.yml  LICENSE  README.md
.github/workflows/: main.yml
swri_profiler/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
swri_profiler/html/: index.html
swri_profiler/html/css/: index.css
swri_profiler/html/js/: profiler.js
swri_profiler/include/swri_profiler/: profiler.h  profiler_impl.h
swri_profiler/launch/: profiler.launch  testing_example.launch
swri_profiler/scripts/: profiler_server  record_profiler_data
swri_profiler/src/: profiler.cpp
swri_profiler/src/nodes/: basic_profiler_example_node.cpp
swri_profiler_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
swri_profiler_msgs/msg/: ProfileData.msg  ProfileDataArray.msg  ProfileIndex.msg  ProfileIndexArray.msg
swri_profiler_msgs/ros1_msg/: ProfileDataArray.msg
swri_profiler_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
swri_profiler_tools/include/swri_profiler_tools/: database_key.h  new_profile_data.h  partition_widget.h  profile.h  profile_database.h  profile_tree_widget.h  profiler_master.h  profiler_msg_adapter.h  profiler_window.h  ros_source.h  ros_source_backend.h  time_plot_widget.h  timeline_widget.h  timeline_widget_tester.h  util.h  variant_animation.h
swri_profiler_tools/resources/: images.qrc
swri_profiler_tools/resources/fonts/hack/: SIL OFL 1.1 and Bitstream Vera.txt
swri_profiler_tools/src/: main.cpp  partition_widget.cpp  profile.cpp  profile_database.cpp  profile_tree_widget.cpp  profiler_master.cpp  profiler_msg_adapter.cpp  profiler_window.cpp  register_meta_types.cpp  ros_source.cpp  ros_source_backend.cpp  time_plot_widget.cpp  timeline_widget.cpp  timeline_widget_tester.cpp  util.cpp
swri_profiler_tools/ui/: profiler_window.ui  timeline_widget_tester.ui
