<package format="2">
  <name>swri_profiler</name>
  <version>0.2.0</version>
  <description>
    swri_profiler provides basic tools for real-time selective
    profiling of ROS C++ nodes.
  </description>

  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
  <license>Copyright SwRI</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>diagnostic_updater</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>swri_profiler_msgs</depend>
  <exec_depend>rosbridge_server</exec_depend>

  <export>
  </export>
</package>
