<package format="3">
  <name>swri_profiler</name>
  <version>0.2.2</version>
  <description>
    swri_profiler provides basic tools for real-time selective
    profiling of ROS C++ nodes.
  </description>

  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
  <url type="repository">https://github.com/swri-robotics/swri_profiler.git</url>
  <license>BSD</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">rospy</depend>
  <exec_depend condition="$ROS_VERSION == 1">rosbridge_server</exec_depend>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <exec_depend condition="$ROS_VERSION == 2">rclpy</exec_depend>

  <build_depend>libboost-thread-dev</build_depend>
  <depend>diagnostic_updater</depend>
  <depend>std_msgs</depend>
  <depend>swri_profiler_msgs</depend>
  <exec_depend>libboost-thread</build_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
