<package format="2">
  <name>swri_profiler_msgs</name>
  <version>0.2.0</version>
  <description>
    Messages for the swri_profiler tool.
  </description>
  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
  <license>Copyright SwRI</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
