<package format="2">
  <name>swri_profiler_tools</name>
  <version>0.2.1</version>
  <description>
    Provides tools for viewing data produced by nodes that use the
    swri_profiler library to output profiling information.    
  </description>

  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
  <url type="repository">https://github.com/swri-robotics/swri_profiler.git</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>qt_qmake</buildtool_depend>

  <exec_depend>libqt_core</exec_depend>
  <exec_depend>libqt_gui</exec_depend>
  <exec_depend>libqt_widgets</exec_depend>

  <depend>libqt_dev</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>swri_profiler_msgs</depend>
</package>
