<package format="2">
  <name>swri_profiler_tools</name>
  <version>0.2.2</version>
  <description>
    Provides tools for viewing data produced by nodes that use the
    swri_profiler library to output profiling information.    
  </description>

  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
  <url type="repository">https://github.com/swri-robotics/swri_profiler.git</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>qt5-qmake</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>swri_profiler_msgs</depend>
</package>
